# cempa-notify

./: .env.example  .gitignore  README.md  config.csv  config_files.csv  docker-compose.yml  dockerfile  pyproject.toml  run_alertas.sh
Modulo_de_Gerenciamento_de_Usuarios/: dockerfile
Modulo_de_Gerenciamento_de_Usuarios/front/: index.html
Modulo_de_Gerenciamento_de_Usuarios/src/: models.py  routes.py  services.py
Módulo de Geração de Alertas/: README.md
files/: Go5km-A-2025-04-21-000000-g1.ctl
modulo_alertas/: README.md  VM.md  pyproject.toml
modulo_alertas/files/GO_Municipios_2024/: GO_Municipios_2024.dbf  GO_Municipios_2024.shx
modulo_alertas/src/: alert_generator.py  file_utils.py  generateMail.py  main.py  meteogram_parser.py  notification_content.py  sendEmail.py  validation.py
modulo_divulgacao_alertas/: README.md  sendEmail.py
modulo_usuarios/: README.md  dockerfile  run.py
modulo_usuarios/database/: users.db
modulo_usuarios/src/: __init__.py  form.py  models.py  routes.py  services.py
shared_config/: __init__.py  cempa_config.py  config_parser.py
src/cempa_notify/: main.py
src/users_manager/: server.py
